# FSL

./: .gitignore  Cargo.toml
examples/: overview.fsl
fsl-cli/: Cargo.toml
fsl-cli/src/: main.rs
fsl-core/: Cargo.toml
fsl-core/src/: commands.rs  data.rs  error.rs  lexer.rs  lib.rs  libraries.rs  parser.rs  potential_futures.rs  source_str.rs  span.rs  types.rs  vars.rs
fsl-core/src/libraries/: async.rs  exec.rs  io.rs  standard.rs
fsl-core/src/types/: argument.rs  command.rs  list.rs  map.rs  value.rs
src/: commands.rs  data.rs  error.rs  lexer.rs  lib.rs  parser.rs  standard_library.rs  types.rs  vars.rs
src/types/: command.rs  value.rs
