[package]
name = "fsl-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "fsl_core"
path = "src/lib.rs"

[dependencies]
async-recursion = "1.1.1"
rand = "0.9.2"
tokio = {version = "1.48.0", features = ["full"]}
tokio-stream = "0.1.18"
futures = "0.3"
unicode-width = "0.2.2"
bytes = "1.11.1"
parking_lot = "0.12.5"
